--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ i am
 <li>git status</li>
 <li>git add index.html</li>
 <li>git commit -am "комментарий что хочу сохранить"</li>
+<li>git push</li>
 </ul>
 </div>
     <!--
