--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ i am
 <li>git add index.html</li>
 <li>git commit -am "комментарий что хочу сохранить"</li>
 <li>git push</li>
+<li>git pull</li>
 </ul>
 </div>
     <!--
